:lipstick: Fix on text align

--- a/src/components/News/styles.module.scss
+++ b/src/components/News/styles.module.scss
@@ -23,6 +23,7 @@
   background-position: 50% 50%;
 
   span {
+    text-align: center;
     position: absolute;
     width: 60px;
     margin: 10px 0 0 10px;
@@ -97,6 +98,7 @@
     padding: 2px 17px;
     background: var(--purple-500);
     font-size: 12px;
+    text-align: center;
     border-radius: 3px;
   }
 
